[TEST] 테스트 코드 개선 및 검증 로직 수정
src/test/java/com/teambiund/bander/auth_server/service/Auth/UpdateServiceTest.java: PasswordEncoder 필드 final로 변경 및 히스토리 검증 로직 수정
src/test/java/com/teambiund/bander/auth_server/service/consent/ConsentServiceTest.java: assertNotEquals로 검증 로직 수정 및 unused exception 제거

참고: 기존 assertEquals 사용 부분 검토 필요

Signed-off-by: ddingjoo <ddingsha9@teambind.co.kr>